--- a/NLP_workshop_1.ipynb
+++ b/NLP_workshop_1.ipynb
@@ -112,9 +112,11 @@
     }
    ],
    "source": [
-    "# reading in pickled data\n",
+    "# data consists of de-duplicated job searches scraped from Monster\n",
+    "# for relevant code, see:\n",
+    "# https://github.com/nkelley-uga/Cult-Terry/blob/master/notebooks/beginner/03_data_scraping.ipynb\n",
     "\n",
-    "job_text = pickle.load(open('job_descriptions.pkl', 'rb'))\n",
+    "job_text = pickle.load(open('data/job_descriptions.pkl', 'rb'))  # reading in pickled data\n",
     "len(job_text)"
    ]
   },
